# pl_itn

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  README.md  grpc_service.dockerfile  pl_itn_lib.dockerfile  pyproject.toml  restful_service.dockerfile  restful_service.dockerfile.dockerignore  setup.py
.github/workflows/: ci.yml  docker.yml  python-app.yml
build_grammar/: build_grammar.py  grammar_config.yaml
build_grammar/common/: class_labels.py  graph.py  rule_labels.py
build_grammar/tagger/: tag.py
build_grammar/tagger/data/: manual.tsv
build_grammar/tagger/data/cardinal_basic/: digit.tsv  teen.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/: zero.tsv
build_grammar/tagger/data/cardinal_declined/fem/acc/: billion_pl.tsv  digit.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/fem/dat/: digit.tsv
build_grammar/tagger/data/cardinal_declined/fem/inst/: digit.tsv  million_pl.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/fem/loc/: digit.tsv
build_grammar/tagger/data/cardinal_declined/fem/nom/: digit.tsv
build_grammar/tagger/data/cardinal_declined/m1/dat/: digit.tsv
build_grammar/tagger/data/cardinal_declined/m1/loc/: digit.tsv  hundred.tsv  million_sg.tsv  thousand_sg.tsv
build_grammar/tagger/data/cardinal_declined/m1/nom/: digit.tsv  thousand_sg.tsv
build_grammar/tagger/data/cardinal_declined/m2/acc/: digit.tsv
build_grammar/tagger/data/cardinal_declined/m2/dat/: billion_sg.tsv
build_grammar/tagger/data/cardinal_declined/m2/inst/: billion_sg.tsv
build_grammar/tagger/data/cardinal_declined/m2/loc/: billion_sg.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/m2/nom/: digit.tsv  thousand_pl.tsv
build_grammar/tagger/data/cardinal_declined/m3/acc/: million_sg.tsv
build_grammar/tagger/data/cardinal_declined/m3/inst/: digit.tsv  million_sg.tsv  teen.tsv
build_grammar/tagger/data/cardinal_declined/m3/loc/: billion_pl.tsv
build_grammar/tagger/data/cardinal_declined/m3/nom/: hundred.tsv  million_pl.tsv
build_grammar/tagger/data/cardinal_declined/n1/acc/: billion_pl.tsv  billion_sg.tsv  digit.tsv  teen.tsv
build_grammar/tagger/data/cardinal_declined/n1/dat/: billion_pl.tsv  digit.tsv  thousand_sg.tsv
build_grammar/tagger/data/cardinal_declined/n1/inst/: digit.tsv
build_grammar/tagger/data/cardinal_declined/n1/loc/: digit.tsv  teen.tsv
build_grammar/tagger/data/cardinal_declined/n2/dat/: thousand_pl.tsv
build_grammar/tagger/data/cardinal_declined/n2/inst/: thousand_pl.tsv
build_grammar/tagger/data/cardinal_declined/n2/loc/: million_pl.tsv  teen.tsv
build_grammar/tagger/data/cardinal_declined/n2/nom/: digit.tsv
build_grammar/tagger/data/cardinal_declined/p1/acc/: digit.tsv
build_grammar/tagger/data/cardinal_declined/p1/dat/: digit.tsv
build_grammar/tagger/data/cardinal_declined/p1/inst/: billion_pl.tsv
build_grammar/tagger/data/cardinal_declined/p1/loc/: thousand_pl.tsv
build_grammar/tagger/data/cardinal_declined/p1/nom/: digit.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/p2/acc/: digit.tsv
build_grammar/tagger/data/cardinal_declined/p2/dat/: hundred.tsv  million_pl.tsv  million_sg.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/p2/inst/: digit.tsv  hundred.tsv  teen.tsv  ties.tsv
build_grammar/tagger/data/cardinal_declined/p2/loc/: digit.tsv
build_grammar/tagger/data/cardinal_declined/p2/nom/: billion_pl.tsv
build_grammar/tagger/data/ordinal/fem/acc/: hundred.tsv  million.tsv  thousand.tsv
build_grammar/tagger/data/ordinal/fem/dat/: digit.tsv  teen.tsv  ties.tsv
build_grammar/tagger/data/ordinal/fem/inst/: billion.tsv  digit.tsv  teen.tsv  ties.tsv  zero.tsv
build_grammar/tagger/data/ordinal/fem/loc/: billion.tsv  teen.tsv  thousand.tsv  ties.tsv  zero.tsv
build_grammar/tagger/data/ordinal/prefixes/: hundred.tsv
build_grammar/tagger/graphs/: cardinal_basic.py  cardinal_common.py  cardinal_declined.py  idle.py  manual.py  ordinal.py  sign.py
build_grammar/verbalizer/: verbalize.py
build_grammar/verbalizer/graphs/: cardinal.py  idle.py  manual.py  ordinal.py  whitelist.py
grpc_service/: .dockerignore  Dockerfile  README.md  pyproject.toml  setup.py
grpc_service/pl_itn_api/: api.proto
grpc_service/pl_itn_service/: app.py  grammar_loader.py  logger.py  service.py
grpc_service/pl_itn_service/proto/: api_pb2.py  api_pb2_grpc.py
k8s/: deployment.yaml  keda-prom.yaml  namespace.yaml  pl_itn.yaml  service-monitor.yml  service.yaml
news/: towncrier_template.md
pl_itn/: VERSION.py  __init__.py  __main__.py  api.proto  exceptions.py  logging.py
pl_itn/grammars/: tagger.fst  verbalizer.fst
pl_itn/src/: __init__.py  grammar.py  normalize.py  parse.py  permute.py  restore_uppercase.py  restore_whitespace.py  tag.py  utils.py  verbalize.py
restful_service/: .dockerignore  Dockerfile  pyproject.toml
restful_service/pl_itn_service/: config.py  grammar_loader.py  logger.py  models.py  service.py
tests/: conftest.py  test_normalizer.py
tests/configs/: cardinals_basic_forms.yaml  cardinals_declined.yaml  date.yaml  empty_grammar.yaml  full_normalization.yaml  ordinals.yaml  time.yaml
tests/data/: test_cardinals_basic.csv  test_cardinals_declined.csv  test_date.csv  test_empty.csv  test_full_normalization.csv  test_ordinals.csv  test_time.csv
tests/stress_test/: locustfile.py  requirements.txt  run_tests.sh
(+47 files in other folders)
